compiler/testData/asJava/lightClasses/lightClassByFqName/compilationErrors/AllInlineOnly.java
public final class AllInlineOnly /* p.AllInlineOnly*/ {
}